refactor bip322 implementation for qr and file signing support